feat(testing): Add comprehensive test suite for KVMirror and pruning modules
Create testing framework with fixtures in conftest.py
Add tests for KVMirror covering token addition, pruning, and thread safety
Implement pruning algorithm tests for attention, age bias, and manual bias
Fix metrics caching to prevent duplicate registrations
Update KVMirror.snapshot() to include all tokens regardless of position
Add fallback for Python versions without functools.iscoroutinefunction

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ pynvml>=11.0.0  # For GPU VRAM monitoring
 jinja2>=3.0.0  # Required for FastAPI templating
 # Keep aioconsole for now as a fallback option
 aioconsole
+pytest>=7.0.0  # For unit testing
+prometheus_client>=0.16.0  # For metrics collection
