Refactor test pipeline to remove KV cache dependencies
- Remove KV cache from all step data passages
- Fix causality by keeping the generated token separate until Step 4
- Base culling decisions solely on initial context size
- Update gitignore to exclude attention traces and test captures
- Implement strict separation of concerns between steps
- Simplify culling rules to use only initial sequence length

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,11 @@ Thumbs.db
 # IDE/editor configs (optional)
 .vscode/
 .idea/
+
+# Project-specific files
+attention_traces/
+tests/captures/
+*.pt
+
+# Test cache
+.pytest_cache/
